[gd_scene load_steps=4 format=3 uid="uid://6jn3v652i4gp"]

[ext_resource type="PackedScene" uid="uid://dtw8rvip0h6jo" path="res://scenes/enemy_monster/monster_enemy_model.glb" id="1_djgwu"]
[ext_resource type="Script" uid="uid://b2i1mviwllxsa" path="res://scripts/enemies/monster_enemy_model.gd" id="2_yjsax"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cenwx"]

[node name="monster_enemy_model" instance=ExtResource("1_djgwu")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
script = ExtResource("2_yjsax")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0.000941811, 0.00398398, -0.210931)
bones/0/rotation = Quaternion(-0.708694, -0.00812001, -0.00780612, 0.705426)
bones/1/rotation = Quaternion(0.18549, 0.00240934, 0.00521852, 0.982629)
bones/2/rotation = Quaternion(0.1747, 0.00335945, 0.00820385, 0.984582)
bones/3/rotation = Quaternion(0.109688, 0.00296607, 0.00817871, 0.993928)
bones/4/rotation = Quaternion(-0.0157027, -0.00797002, 0.00123656, 0.999844)
bones/5/rotation = Quaternion(-0.188706, 0.0236753, -0.0174357, 0.981593)
bones/7/rotation = Quaternion(0.718628, 0.441674, -0.377995, 0.3816)
bones/8/rotation = Quaternion(0.0441453, -0.177856, 0.273499, 0.944255)
bones/9/rotation = Quaternion(0.10867, 0.0558526, 0.447814, 0.885739)
bones/10/rotation = Quaternion(0.0680574, -0.454233, 0.232933, 0.857195)
bones/11/rotation = Quaternion(0.344225, 0.343962, 0.0532245, 0.87199)
bones/12/rotation = Quaternion(-0.0655285, 0.00437536, -0.227082, 0.971659)
bones/13/rotation = Quaternion(-0.0744507, 0.00700613, -0.107245, 0.991416)
bones/15/rotation = Quaternion(0.164784, -0.0142591, -0.0867993, 0.9824)
bones/16/rotation = Quaternion(0.190526, 0.00066341, -0.00525334, 0.981668)
bones/17/rotation = Quaternion(0.235884, -0.00075334, -0.00264982, 0.971777)
bones/19/rotation = Quaternion(0.164411, -0.018707, -0.0804301, 0.982929)
bones/20/rotation = Quaternion(0.190403, -0.00115125, -0.0136886, 0.98161)
bones/21/rotation = Quaternion(0.190407, -0.000272509, -0.021231, 0.981476)
bones/23/rotation = Quaternion(0.162584, -0.0391482, -0.0796251, 0.982697)
bones/24/rotation = Quaternion(0.189554, -0.00121119, -0.0244823, 0.981564)
bones/25/rotation = Quaternion(0.1896, 0.00464561, -0.0435108, 0.980886)
bones/27/rotation = Quaternion(0.696917, -0.450803, 0.409477, 0.378698)
bones/28/rotation = Quaternion(0.128654, 0.165539, -0.2241, 0.951748)
bones/29/rotation = Quaternion(0.0747877, 0.110772, -0.551701, 0.823263)
bones/30/rotation = Quaternion(0.17016, 0.169417, -0.0158985, 0.970614)
bones/31/rotation = Quaternion(0.41627, -0.358133, -0.152493, 0.821709)
bones/32/rotation = Quaternion(-0.0906009, -0.0478152, 0.357396, 0.928317)
bones/33/rotation = Quaternion(-0.116982, -0.0870963, -0.035692, 0.988664)
bones/35/rotation = Quaternion(0.28503, -0.149033, 0.0545968, 0.945286)
bones/36/rotation = Quaternion(0.273652, 0.0103886, -0.0956054, 0.957009)
bones/37/rotation = Quaternion(0.104731, 0.0379638, -0.107619, 0.987931)
bones/39/rotation = Quaternion(0.248595, 0.0582946, 0.00408934, 0.966843)
bones/40/rotation = Quaternion(0.266085, 0.000998837, 0.0390858, 0.963156)
bones/41/rotation = Quaternion(0.266086, -0.00218823, 0.0417804, 0.963041)
bones/43/rotation = Quaternion(0.236565, 0.158146, 0.0459346, 0.957558)
bones/44/rotation = Quaternion(0.264856, 0.0971443, 0.0555345, 0.957774)
bones/45/rotation = Quaternion(0.266474, 0.0922989, 0.0897206, 0.955208)
bones/47/rotation = Quaternion(0.0754722, 0.35633, 0.891476, -0.269451)
bones/48/rotation = Quaternion(-0.530547, 0.0266994, -0.138062, 0.83591)
bones/49/rotation = Quaternion(0.537651, 0.132572, -0.133687, 0.821879)
bones/50/rotation = Quaternion(0.357374, -0.035084, -0.0800245, 0.929865)
bones/52/rotation = Quaternion(-0.16104, 0.345487, 0.89936, 0.21414)
bones/53/rotation = Quaternion(-0.530967, -0.0819425, 0.0609712, 0.841214)
bones/54/rotation = Quaternion(0.543921, -0.0903691, 0.146178, 0.82135)
bones/55/rotation = Quaternion(0.399978, 0.0962522, 0.0790452, 0.908023)

[node name="RightArm" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="5"]
transform = Transform3D(-0.0265353, 0.28618, -0.0290603, 0.151845, -0.0108505, -0.245505, -0.244308, -0.0378271, -0.149433, -0.0652333, 0.11461, -0.229002)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.190272, -0.301616, -0.0111961)
body_offset = Transform3D(0.245765, 0.100778, -0.113537, -0.148311, 0.113249, -0.220513, -0.0324189, 0.245898, 0.14809, 0.0758873, 0.0034696, 0.0696564)
bone_name = "mixamorig_RightHand"

[node name="hitbox" type="Area3D" parent="Armature/Skeleton3D/RightArm" index="0"]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/RightArm/hitbox" index="0"]
transform = Transform3D(1, 1.11759e-08, 2.08616e-07, -6.33299e-08, 1, -6.70552e-08, 0, 2.98023e-08, 1, -0.419159, -0.258765, -0.0734929)
shape = SubResource("SphereShape3D_cenwx")

[connection signal="body_entered" from="Armature/Skeleton3D/RightArm/hitbox" to="." method="_on_hitbox_body_entered"]
